# biobat

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
public/com/: 2018YFA0901900-10.tif  2018YFA0901900-11.tif  2018YFA0901900-12.tif  2018YFA0901900-13.tif  2018YFA0901900-14.tif  2018YFA0901900-15.tif  2018YFA0901900-16.tif  2018YFA0901900-17.tif  2018YFA0901900-18.tif  2018YFA0901900-19.tif  2018YFA0901900-20.tif  2018YFA0901900-21.tif  2018YFA0901900-22.tif  2018YFA0901900-23.tif  2018YFA0901900-24.tif  2018YFA0901900-25.tif  2018YFA0901900-26.tif  2018YFA0901900-27.tif  2018YFA0901900-4.tif  2018YFA0901900-5.tif  2018YFA0901900-6.tif  2018YFA0901900-7.tif  2018YFA0901900-8.tif  2018YFA0901900-9.tif
src/: App.vue  main.ts  style.css
src-tauri/: .env  .gitignore  Cargo.toml  bainfo.db  bioinfo.db  bioinfo.db-journal  tauri.conf.json
src-tauri/migrations/bactera/: up.sql
src-tauri/migrations/compound/: up.sql
src-tauri/migrations/element/: up.sql
src-tauri/src/: cmd.rs  db.rs  main.rs  mod.rs  models.rs  schema.rs
src-tauri/src/info/: ba.rs  com.rs  ele.rs  mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: ba.rs  com.rs  ele.rs  mod.rs
src/components/: BaList.vue  ComList.vue  EleList.vue  Header.vue  HelloWorld.vue
src/router/: router.ts
src/server/: server.cjs
src/views/: BaDetail.vue  Bainfo.vue  ComDetail.vue  Detail.vue  EleDetail.vue  Hello.vue  Home.vue
