[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
log= { version = "^0.4" }
reqwest = { version = "0.11", features = ["json", "socks"] }
actix-web = "4.4.0"
actix-cors = "*"
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["system-tray"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid", "returning_clauses_for_sqlite_3_35", "serde_json"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"]  }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
